Update the firebase SDK and Angular fire to latest version. - Auth service changed. - The resolve for every route changed. - Firebase reference changed to chaining method. - Remove unnecessary constant.

--- a/.jshintrc
+++ b/.jshintrc
@@ -12,9 +12,10 @@
   "unused": true,
   "globals": {
     "angular": false,
-    "Firebase": false,
+    "firebase": false,
     "moment": false,
     "jquery": false,
-    "google": false
+    "google": false,
+    "$": false
   }
 }
