--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "firebase": "^2.4.2",
     "angular-ui-router": "^0.3.0",
     "angular-md5": "^0.1.10",
-    "jquery": "^3.0.0"
+    "jquery": "^3.0.0",
+    "angular-material-data-table": "^0.10.9"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
