--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "karma start test/karma.conf.js"
+    "test": "karma start test/karma.conf.js",
+    "start": "node server.js"
   },
   "dependencies": {
     "browserslist": "^1.3.2",
