--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "baozi",
   "private": true,
   "devDependencies": {
+    "babel-preset-es2015": "^6.13.2",
     "browserslist": "^1.3.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "3.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-cache": "^0.4.5",
     "gulp-connect": "^4.1.0",
     "gulp-filter": "^4.0.0",
     "gulp-imagemin": "^3.0.1",
+    "gulp-inject": "^4.0.0",
     "gulp-jshint": "^2.0.1",
     "gulp-karma": "0.0.5",
     "gulp-load-plugins": "^1.2.4",
@@ -18,15 +21,14 @@
     "gulp-rev": "^7.1.0",
     "gulp-rev-replace": "^0.4.2",
     "gulp-sass": "^2.0.4",
+    "gulp-sort": "^2.0.0",
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^3.0.0",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.2.4",
-    "gulp-inject": "^4.0.0",
-    "gulp-sort": "^2.0.0",
     "jasmine-core": "^2.4.1",
-    "jshint-stylish": "^2.2.0",
     "jshint": "^2.9.2",
+    "jshint-stylish": "^2.2.0",
     "karma": "^1.1.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
