--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular-ui-router": "^0.3.0",
     "angular-md5": "^0.1.10",
     "jquery": "^3.0.0",
-    "angular-material-data-table": "^0.10.9"
+    "angular-material-data-table": "^0.10.9",
+    "angular-google-maps": "^2.3.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
