--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-md5": "^0.1.10",
     "jquery": "^3.0.0",
     "angular-material-data-table": "^0.10.9",
-    "angular-google-maps": "^2.3.3"
+    "angular-google-maps": "^2.3.3",
+    "angular-marked": "^1.2.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
